--- a/input_data_excel_page.html
+++ b/input_data_excel_page.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Label Print</title>
+
+    <!-- Import Handsontable for table input -->
     <script src="https://cdn.jsdelivr.net/npm/handsontable@12.1.2/dist/handsontable.full.min.js"></script>
+
+    <!-- Import QR Code generator -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
+    <!-- Import Handsontable CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/handsontable@12.1.2/dist/handsontable.full.min.css"
     />
+
     <style>
+      /* General body styling */
       body {
         font-family: Arial, sans-serif;
         background-color: #f8f9fa;
@@ -18,6 +26,7 @@
         padding: 20px;
       }
 
+      /* Main container */
       .container {
         max-width: 800px;
         margin: auto;
@@ -27,6 +36,7 @@
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
       }
 
+      /* Handsontable container */
       .handsontable-container {
         border: 1px solid #ccc;
         margin-bottom: 15px;
@@ -35,46 +45,58 @@
         border-radius: 5px;
       }
 
+      /* QR label container (6cm x 6cm) */
       .label-container {
-        width: 4cm;
-        height: 4cm;
+        width: 6cm;
+        height: 6cm;
         background: white;
-        padding: 2px;
+        padding: 5px;
         border: 1px solid black;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         margin: auto;
         text-align: left;
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: space-between;
       }
 
+      /* Data table inside QR label, moved 1px from the left */
       .data-table {
-        width: 60%;
-        font-size: 5px;
-        line-height: 1;
-        text-align: left;
-        margin-left: 2px;
+        width: 55%; /* Adjusted to leave space for QR Code */
+        font-size: 8px;
+        line-height: 1.2;
+        margin-left: 1px; /* Adjusted to exactly 1px from left margin */
+        border-collapse: collapse;
       }
 
-      .data-table td {
-        padding: 1px;
+      /* Adds 3px gap between text table and QR code */
+      .data-table-container {
+        margin-right: 3px; /* Adds a 3px gap between text and QR Code */
       }
 
-      .data-table td:first-child {
+      /* Table borders and padding */
+      .data-table td,
+      .data-table th {
+        padding: 2px;
+        border: 1px solid black;
+      }
+
+      .data-table th {
+        background-color: #f0f0f0;
         font-weight: bold;
-        width: 40%;
       }
 
+      /* QR Code container */
       #qrcode {
-        width: 35%;
-        margin-left: -10px;
+        width: 40%;
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: white;
+        padding: 5px;
       }
 
+      /* Print button styling */
       .print-button {
         display: block;
         margin: 10px auto;
@@ -91,6 +113,7 @@
         background: #333;
       }
 
+      /* Print styling improvements */
       @media print {
         .print-button,
         .handsontable-container,
@@ -105,11 +128,16 @@
           padding: 5px;
         }
         .label-container {
-          width: 4cm;
-          height: 4cm;
+          width: 6cm;
+          height: 6cm;
           border: none;
           box-shadow: none;
-          font-size: 4px;
+          font-size: 6px;
+        }
+        #qrcode img {
+          image-rendering: crisp-edges;
+          width: 4cm;
+          height: 4cm;
         }
       }
     </style>
@@ -123,15 +151,21 @@
 
       <h2>QR Code Label</h2>
       <div class="label-container">
-        <table class="data-table" id="dataTable"></table>
+        <div class="data-table-container">
+          <table class="data-table" id="dataTable"></table>
+        </div>
         <div id="qrcode"></div>
       </div>
 
-      <button class="print-button" onclick="window.print()">Print Label</button>
+      <button class="print-button" onclick="printAndReload()">
+        Print Label
+      </button>
     </div>
 
     <script>
-      let hot;
+      let hot; // Handsontable instance
+
+      // Fields required for QR code in the correct order
       const FIELD_ORDER = [
         "HR Coil No.",
         "Batch No.",
@@ -147,6 +181,9 @@
         "Remarks"
       ];
 
+      /**
+       * Initializes the Handsontable with predefined fields.
+       */
       function initHandsontable() {
         const container = document.getElementById("handsontable");
         hot = new Handsontable(container, {
@@ -159,6 +196,7 @@
           licenseKey: "non-commercial-and-evaluation"
         });
 
+        // Trigger QR code update after table change
         hot.addHook("afterChange", function () {
           generateLabelFromHandsontable();
         });
@@ -166,24 +204,34 @@
         generateLabelFromHandsontable();
       }
 
+      /**
+       * Extracts values from the table, formats them, and generates the QR code.
+       */
       function generateLabelFromHandsontable() {
         let sheetData = hot.getData();
         let dataPairs = [];
-        let qrValues = Array(FIELD_ORDER.length).fill(""); // Ensures all fields exist and are empty by default
+        let qrValues = Array(FIELD_ORDER.length).fill("");
 
         for (let i = 0; i < FIELD_ORDER.length; i++) {
           let fieldLabel = sheetData[i][0]?.trim();
-          let fieldValue = sheetData[i][1]?.trim() || ""; // Maintain empty values for QR
+          let fieldValue = sheetData[i][1]?.trim() || "";
 
           if (fieldLabel) {
             dataPairs.push([fieldLabel, fieldValue || "-"]);
           }
 
-          qrValues[i] = fieldValue; // Maintain order and empty values
+          // Limit text length per field to avoid QR code overload
+          const MAX_CHAR_LIMIT = 30;
+          qrValues[i] =
+            fieldValue.length > MAX_CHAR_LIMIT
+              ? fieldValue.substring(0, MAX_CHAR_LIMIT)
+              : fieldValue;
         }
 
+        // Update table with entered values
         let table = document.getElementById("dataTable");
         table.innerHTML = "";
+
         dataPairs.forEach((row) => {
           let tr = document.createElement("tr");
           let td1 = document.createElement("td");
@@ -197,18 +245,32 @@
           table.appendChild(tr);
         });
 
-        // ✅ Ensure QR code format is strict with exactly 11 hash separators
-        let qrText = qrValues.join("#");
+        // Generate QR text ensuring 11 hash (`#`) separators
+        let qrText = qrValues.map((val) => val.trim()).join("#");
 
+        // Generate the QR code with optimized settings
         document.getElementById("qrcode").innerHTML = "";
         new QRCode(document.getElementById("qrcode"), {
           text: qrText,
-          width: 50,
-          height: 50,
-          correctLevel: QRCode.CorrectLevel.H
+          width: 200,
+          height: 200,
+          correctLevel: QRCode.CorrectLevel.Q
         });
       }
 
+      /**
+       * Triggers print and reloads the page after printing.
+       */
+      function printAndReload() {
+        window.print();
+      }
+
+      // Ensures the page reloads **after** printing is completed
+      window.onafterprint = function () {
+        location.reload();
+      };
+
+      // Initialize Handsontable on page load
       initHandsontable();
     </script>
   </body>
