--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <a href="sample_format.html"
         ><h1>Click here to view Format of Data/Excel accepted</h1></a
       >
-      <a href="input_data_excel_page.html"
+      <a href="input_data_excel_page copy.html"
         ><h1>Click here to input data manually via Excel</h1></a
       >
       <h2>Upload Excel File & Generate QR Code</h2>
